Updated Assingment1 with a simple style sheet

--- a/Assignment1.html
+++ b/Assignment1.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            h2 {
+                font: 145%/1.5 Times New Roman;
+                max-width: 33em;
+            }
+        </style>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CS216 Assignment 1</title>
