--- a/Assignment1.html
+++ b/Assignment1.html
@@ -3,7 +3,7 @@
     <head>
         <style>
             h2 {
-                font: 145%/1.5 Arial;
+                font: 145%/1.5 Times New Roman;
                 max-width: 33em;
             }
         </style>
