Took out some jargin from Assignment1

--- a/Assignment1.html
+++ b/Assignment1.html
@@ -6,23 +6,23 @@
                 max-width: 33em;
             }
         </style>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--<meta charset="utf-8">-->
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
         <title>CS216 Assignment 1</title>
     </head>
-    <body data-new-gr-c-s-check-loaded="14.1123.0" data-gr-ext-installed>
+    <body>
         <h1>Assignment 1</h1>
         <h2>Username</h2>
-        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php" data-dashline-rid="ef1eaa13b2a4939b" data-form-type="other">
+        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a username: 
-            <input type="text" name="username" data-dashline-rid="438b4906161524dc" data-form-type="username" data-kwimpalastatus="alive" data-kwimpalaid="1694284744267-0"> 
-            <button type="submit" name="submit" value="Username_Submit" data-dashline-label="true" data-dashline-rid="228226e11d3ca2dc" data-form-type="action">Submit username</button>
+            <input type="text" name="username">
+            <button type="submit" name="submit" value="Username_Submit" data-form-type="action">Submit username</button>
         </form>
         <h2>Codeword</h2>
-        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php" data-dashline-rid="ef1eaa13b2a4939b" data-form-type="other">
+        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a codeword:
-            <input type="hidden" name="codeword" value="NeXT" data-dashline-rid="438b4906161524dc" data-form-type="codeword" data-kwimpalastatus="alive" data-kwimpalaid="1694284744267-0">
-            <button type="submit" name="submit" value="Codeword_Submit" data-dashline-label="true" data-dashline-rid="c1796df50e972543" data-form-type="action">Submit codeword</button>
+            <input type="hidden" name="codeword" value="NeXT">
+            <button type="submit" name="submit" value="Codeword_Submit" data-form-type="action">Submit codeword</button>
         </form>
     </body>
 </html>
