Removed jargon because all that jargon was actually from dashlane extensions in my own browser

--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
         </style>
         <title>CS216 Assignment 1</title>
     </head>
-    <body data-new-gr-c-s-check-loaded="14.1123.0" data-gr-ext-installed>
+    <body>
         <h1>Assignment 1</h1>
         <h2>Username</h2>
-        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php" data-dashline-rid="766af5d2460c7772" data-form-type="other">
+        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a username: 
-            <input type="text" name="username" data-dashline-rid="a618ec37a7377519" data-form-type="username" datakwimpalastatus="alive" data-kwimpalaid="1694478140206-0">
-            <button type="submit" name="submit" value="Username_Submit" data-dashlane-label="true" data-dashline-rid="599dd048f3be68b2" data-dashline-rid="action">Submit username</button>
+            <input type="text" name="username">
+            <button type="submit" name="submit" value="Username_Submit">
+                Submit username
+            </button>
         </form>
         <h2>Codeword</h2>
-        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php" data-dashline-rid="ec6fbf4500a5e645" data-form-type="other">
+        <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a codeword:
-            <input type="hidden" name="codeword" value="NeXT" data-dashline-rid="f5f517ad7a1625b7" data-form-type="codeword" data-kwimpalastatus="alive" data-kwimpalaid="1694478140206-1">
-            <button type="submit" name="submit" value="Codeword_Submit" data-dashline-label="true" data-dashline-rid="ed12d33449650185" data-form-type="action">Submit codeword</button>
+            <input type="hidden" name="codeword" value="NeXT">
+            <button type="submit" name="submit" value="Codeword_Submit">
+                Submit codeword
+            </button>
         </form>
     </body>
 </html>
