changed the value of name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Username</h2>
         <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a username: 
-            <input type="text" name="username">
+            <input type="text" name="name">
             <button type="submit" name="submit" value="Username_Submit">
                 Submit username
             </button>
