Added back names

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <h2>Username</h2>
         <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a username: 
-            <input type="text">
-            <button type="submit">
+            <input type="text" name="username">
+            <button type="submit" name="submit">
                 Submit username
             </button>
         </form>
         <h2>Codeword</h2>
         <form method="POST" action="https://cs.uky.edu/~soward/validator-a1.php">
             Enter a codeword:
-            <input type="hidden" value="NeXT">
-            <button type="submit">
+            <input type="hidden" name="codeword" value="NeXT">
+            <button type="submit" name="submit">
                 Submit codeword
             </button>
         </form>
